# stout-borrowed-ptr

./: BUILD.bazel  README.md  WORKSPACE.bazel
bazel/: deps.bzl  repos.bzl
include/stout/: borrowed_ptr.h
stout/: borrowable.h  borrowed_ptr.h
test/: BUILD.bazel  borrow.cc  borrowed_ptr.cc
